Changelog for NICOS 2
=====================

**Release 2.2.0**

  - Added back text-based client for the daemon.

  - Changed cache store file format to retain info if the key will expire.
    This fixes cache startup behavior even after unclean shutdowns.

  - Added HTML version of NICOS monitor.

  - Added basic mathematical functions and constants in the default namespace.

  - Added "resplot" and "hklplot" commands for TAS instruments, which are
    interactive resolution calculation and reciprocal space map helpers.

  - Added "alpha" attached-device to triple-axis instrument that is moved
    to the angle between ki and Q whenever the TAS is moved.

  - Changed "users" parameter of the experiment device to a simple string,
    and it is now possible to add users directly in "NewExperiment()".

  - Added "maxage" parameter to "doRead()" and "doStatus()" methods,
    which can be given to subdevices.

  - Added basic TANGO devices.

  - Added a "DeviceAlias" object that can be used to refer with one name
    to different actual devices.

  - Added graphical help system to the GUI client.  Improved quality of
    docstrings of most commands.

  - Added a "mode" parameter to "doInit()" and "doPreinit()" so that
    device implementers remember to check for simulation mode.

  - Added an API "Measurable.presetInfo()" that returns the accepted preset
    keys; to check that given presets are actually used by the detector(s).

  - Added a new standalone history viewer that plots cache data.

  - Improved the message display in the web interface.

  - Improved the ELog HTML styling.

  - Added a "debug" keyword-only argument to "Simulate()" that prints a
    traceback on exception.

  - Added "obsreadings" parameter to generic axis to use instead of the
    hardcoded 100 times when asking observers for the current value.

  - Added "history()" method to Grace liveplot.

  - History-related commands and methods now accept strings as start and